FLUID-3754: Fixed a padding issue when hover being applied shifts list items slightly.
svn path=/fluid/infusion/trunk/; revision=10257

--- a/src/webapp/demos/reorderer/listReorderer/css/listReorderer.css
+++ b/src/webapp/demos/reorderer/listReorderer/css/listReorderer.css
@@ -33,6 +33,7 @@ ul li {
 	border-left: 1px solid #00a651;
 	border-bottom: 1px solid #00a651;
 	cursor: move;
+    padding: 4px; /* set the padding 4px from 5 px to compensate for 1px border. */
 }
 
 .demo-reorderer-movable-dragging {
